# ros-code-checker-simulator

./: .gitignore  README.md
backend/checker/: checker.py  report_generator.py  ros_parser.py  ros_structure.py  safety_checks.py  syntax_check.py
backend/simulator/: coppeliasim_bridge.py  result_analyzer.py  run_simulator.py  screenshot_capture.py
backend/simulator/scene/: scene_ur5_cube.ttt
backend/utils/: logger.py  unzipper.py
scripts/: start_checker.sh  start_web.sh
test_packages/good_package/: package.xml  setup.cfg  setup.py
test_packages/good_package/good_package/: simple_publisher.py
web/: app.py
web/static/: style.css
web/templates/: report.html  simulation.html  upload.html
