<?xml version="1.0"?>
<package format="3">
  <name>good_package</name>
  <version>0.0.0</version>
  <description>Good ROS 2 test package for code checker</description>

  <maintainer email="test@example.com">Pratham</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
